Added zsh autocomplete plugin. Added groovy plugin to VIM. Added mouse configuration to tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,3 +11,9 @@ set -g @resurrect-staregy-vim 'session'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+setw -g mouse on
+setw -g mode-keys vi
+setw -g monitor-activity on
+set -g visual-activity on
+
